# Trapezoidal_Map

./: .gitignore  CMakeLists.txt  README.md
data/: segments_basic.txt  segments_galton.txt  segments_interactive.txt
src/: glTpz.c  glTpz.h  main.c  predicates.c  predicates.h  tpzMap.c  tpzMap.h
